Skip validation for create request for duplicate caller

--- a/app/views/activation_call_requests/index.html.haml
+++ b/app/views/activation_call_requests/index.html.haml
@@ -22,7 +22,7 @@
               %td= activation_call_request.latitude
               %td= activation_call_request.attempt
               %td= activation_call_request.address
-              %td= activation_call_request.previously_called?
+              %td= activation_call_request.previously_called? ? 'YES' : 'NO'
               %td
                 = link_to activation_call_request, class: 'btn btn-primary btn-xs' do
                   <i class='glyphicon glyphicon-eye-close'></i> Show
