Added extra fields for activation call requests

--- a/app/views/activation_call_requests/_form.html.haml
+++ b/app/views/activation_call_requests/_form.html.haml
@@ -3,10 +3,13 @@
 
   .form-inputs
     = f.input :imi_number
+    = f.input :device_phone_number
+    = f.input :project_name
+    = f.input :team_number
+    = f.input :team_area
     = f.input :cell_number
     = f.input :longitude
     = f.input :latitude
-    = f.input :attempt
     = f.input :address
 
   .form-actions
