Change messages and fetch duplicate requests

--- a/app/views/activation_call_requests/show.html.haml
+++ b/app/views/activation_call_requests/show.html.haml
@@ -1,5 +1,6 @@
-%p#notice= notice
-
+%p
+  %b Number of Call:
+  = @activation_call_request.duplicate_requests_count
 %p
   %b Date Time:
   = @activation_call_request.created_at
