--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -17,4 +17,16 @@
     .form-group
       = f.label :password_confirmation
       = f.password_field :password_confirmation, class: 'form-control'
+    .form-group
+      = f.label :Permissions
+      %br
+        - User::ROLES.each do |role|
+          .row
+            .col-md-4
+              - unless role.nil?
+                = check_box_tag "user[roles][]", role, @user.roles.include?(role), id: role
+                = h "#{role.try(:humanize)}"
+          %br
+            %br
+        = hidden_field_tag "user[roles][]", ""
     = f.submit 'Sign up', :class => 'button right'
