Fix# duplicate requests

--- a/app/views/activation_call_requests/index.html.haml
+++ b/app/views/activation_call_requests/index.html.haml
@@ -36,7 +36,7 @@
                   <i class='glyphicon glyphicon-eye-close'></i> Show
                 = link_to edit_activation_call_request_path(activation_call_request), class: 'btn btn-primary btn-xs' do
                   <i class='glyphicon glyphicon-wrench'></i> Edit
-                = link_to activation_call_request, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs' do
+                -#= link_to activation_call_request, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs' do
                   <i class='glyphicon glyphicon-trash'></i> Delete
 
     = link_to new_activation_call_request_path, :class => "btn btn-sm btn-primary" do
