Fix# added paginations

--- a/app/views/activation_call_requests/index.html.haml
+++ b/app/views/activation_call_requests/index.html.haml
@@ -39,6 +39,8 @@
                 -#= link_to activation_call_request, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger btn-xs' do
                   <i class='glyphicon glyphicon-trash'></i> Delete
 
+    .text-center
+      = paginate @activation_call_requests, :theme => 'twitter-bootstrap-3'
     = link_to new_activation_call_request_path, :class => "btn btn-sm btn-primary" do
       <i class='glyphicon glyphicon-plus'></i> New Activation call request
     - if current_user.admin?
