--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,6 +1,7 @@
 - if user_signed_in?
   %li= link_to 'Activation Call Request', activation_call_requests_path
-  %li= link_to 'Summary', report_activation_call_requests_path
+  %li= link_to 'Summary', summary_activation_call_requests_path
+  %li= link_to 'Report', report_activation_call_requests_path
   %li= link_to 'Edit account', edit_user_registration_path
   %li= link_to 'Sign out', destroy_user_session_path, method: 'delete'
 - else
