--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,4 +1,8 @@
 - if user_signed_in?
+  %li= link_to "Call Track", export_activation_call_requests_path(format: "csv")
+  %li= link_to "Project", export_project_activation_call_requests_path(format: "csv")
+  %li= link_to "User", export_user_activation_call_requests_path(format: "csv")
+
   %li= link_to 'Activation Call Request', activation_call_requests_path
   %li= link_to 'Summary', summary_activation_call_requests_path
   %li= link_to 'Report', report_activation_call_requests_path
@@ -6,4 +10,4 @@
   %li= link_to 'Sign out', destroy_user_session_path, method: 'delete'
 - else
   %li= link_to 'Sign in', new_user_session_path
-  -#%li= link_to 'Sign up', new_user_registration_path
+  %li= link_to 'Sign up', new_user_registration_path
